--- a/src/simple-account-manager/package.json
+++ b/src/simple-account-manager/package.json
@@ -15,10 +15,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.6",
+    "@angular/cdk": "^10.1.3",
     "@angular/common": "~10.0.6",
     "@angular/compiler": "~10.0.6",
     "@angular/core": "~10.0.6",
     "@angular/forms": "~10.0.6",
+    "@angular/material": "^10.1.3",
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
@@ -35,6 +37,7 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "bootstrap": "^4.5.2",
     "codelyzer": "^6.0.0",
     "electron": "^9.2.1",
     "jasmine-core": "~3.5.0",
